<?xml version="1.0"?>
<package format="2">

  <name>garmin_gimbal_llcp</name>
  <version>0.0.1</version>
  <description>2 garmins, Tarot gimbal and llcp communication</description>

  <maintainer email="hertdani@fel.cvut.cz">Daniel Hert</maintainer>
  <maintainer email="stoudpav@fel.cvut.cz">Pavel Stoudek</maintainer>

  <license>BSD 3-Clause</license>

  <author email="hertdani@fel.cvut.cz">Daniel Hert</author>
  <author email="stoudpav@fel.cvut.cz">Pavel Stoudek</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>cmake_modules</depend>
  <depend>nodelet</depend>
  <depend>mrs_msgs</depend>

  <export>

    <!-- The plugins.xml file defines nodelet as a plugin -->
    <nodelet plugin="${prefix}/plugins.xml" />

  </export>

</package>
